[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
byteorder = "1.5.0"
bytes = { version = "1.5.0", features = ["serde"] }
dashmap = "5.5.3"
fastrand = "2.0.1"
md-5 = "0.10.6"
num-bigint = "0.4.4"
num-traits = "0.2.17"
parking_lot = "0.12.1"
regex = "1.10.2"
serde = "1.0.193"
serde_bytes = "0.11.13"
serde_derive = "1.0.193"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
