[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.1"
bytes = { version = "1.5.0", features = ["serde"] }
md-5 = "0.10.6"
tokio-util = { version = "0.7.10", features = ["codec"] }
proto = { path = "../proto" }
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3.29"
byteorder = "1.5.0"
dashmap = "5.5.3"
tokio-stream = { version = "0.1.15", features = ["net", "sync"] }
fastrand = "2.0.1"
gethostname = "0.4.3"
async-trait = "0.1.77"
thiserror = "1.0.56"
pin-project = "1.1.3"
futures-core = "0.3.30"
motore = "0.4.0"
pin-project-lite = "0.2.13"
async-stream = "0.3.5"
futures-util = "0.3.29"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.3"
rustls = "0.23.12"

#[[bin]]
#name = "comboer"
#path = "src/main.rs"
